[package]
name = "i-cant-believe-its-not-bsn"
authors = ["Alice I. Cecile"]
version = "0.1.1"
edition = "2021"
repository = "https://github.com/Leafwing-Studios/i-cant-believe-its-not-bsn"
license = "MIT OR Apache-2.0"
description = "Tools for spawning entity hierarchies in Bevy"
tags = ["bevy", "ecs"]

[dependencies]
bevy_ecs = { git = "https://github.com/bevyengine/bevy", default-features = false }
bevy_hierarchy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = ["reflect"] }
